--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,6 @@
 @import "@fontsource/fira-mono";
 
-:root {
+:global {
   font-family: Arial, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     "Helvetica Neue", sans-serif;
   --font-mono: "Fira Mono", monospace;
@@ -16,15 +16,6 @@
   --column-margin-top: 4rem;
 }
 
-body {
-  /*background-color: var(--primary-color);
-  background: linear-gradient(
-    180deg,
-    var(--primary-color) 0%,
-    var(--secondary-color) 10.45%,
-    var(--tertiary-color) 41.35%
-  );*/
-}
 
 body::before {
 }
