--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,4 @@
-@import "@fontsource/fira-mono";
-
-:global {
-  font-family: Arial, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-    "Helvetica Neue", sans-serif;
-  --font-mono: "Fira Mono", monospace;
-  --pure-white: #ffffff;
+:root {
   --primary-color: #b9c6d2;
   --secondary-color: #d0dde9;
   --tertiary-color: #edf0f8;
@@ -15,7 +9,6 @@
   --column-width: 42rem;
   --column-margin-top: 4rem;
 }
-
 
 body::before {
 }
